# beautifulsoup-rl

./: .env.example  .gitignore  BENCHMARK_COMPARISON.md  CLAUDE.md  README.md  REVIEW_RESPONSE.md  TEST_RECORDS.md  TODO.md  TRAINING_RUNS.md  beautiful_soup_env.py  debug.html  pyproject.toml  results_glm47_post_fix.json  results_glm4_post_fix.json  results_ministral3_8b_full.json  results_ministral3_v2.json  results_ministral3b_post_pr14.json  results_qwen3_8b_full.json  results_qwen3_8b_part1.json  results_qwen3_8b_part2.json  results_qwen3_8b_post_pr14.json  results_qwen3_post_fix.json  tech-skeleton.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/training-monitor/: SKILL.md
.github/workflows/: bench.yml  benchmark.yml  ci.yml  training-monitor.yml
.prime/: .env-metadata.json
bs4_env/: __init__.py  auto_import.py  config.py  dataset.py  lazy_dataset.py  prompt.py  registry.py
bs4_env/adapters/: __init__.py  verifiers_adapter.py
bs4_env/data/: __init__.py  bench_manifest.json  i18n_content.py  real_patterns.py
bs4_env/generators/: __init__.py  base.py  mvp_advanced.py  mvp_core_extraction.py  mvp_core_remaining.py  mvp_error_bait.py  mvp_forms.py  mvp_hard.py  mvp_i18n.py  mvp_json_ld.py  mvp_limitations.py  mvp_multistep.py  mvp_multivalue_class.py  mvp_navigablestring.py  mvp_tables.py  mvp_whitespace_sibling.py  primer.py
bs4_env/grading/: __init__.py  normalize.py  rubric.py  safety.py  schema.py
bs4_env/scripts/: __init__.py  benchmark_memory.py  eval_with_llm.py  preview_dataset.py  smoke_eval_local.py
bs4_env/tools/: __init__.py  executor.py  harness.py  tool_defs.py
configs/: registry.json
configs/prime-rl/: beautiful-soup-env.toml  default.toml  llama-3.2-3b-2xh100.toml  llama-3.2-3b-8xh100.toml  ministral-8b-h100.toml  qwen2.5-7b-h100.toml  qwen25-3b-2x4090.toml  qwen25-3b-2x5090-bootstrap.toml  qwen25-3b-2x5090-curriculum.toml  qwen25-3b-2x5090.toml  qwen3-8b-2x4090.toml  qwen3-8b-2xh100.toml  qwen3-8b-bootstrap.toml
docs/: bootstrap-plan.md  bootstrap-test-plan.md  prd.md  prime-rl.md  tech-skeleton.md
research/corpus/e-commerce/amazon/: product_001.html  product_001.meta.json
research/corpus/e-commerce/ebay/: product_001.html  product_001.meta.json
research/corpus/e-commerce/newegg/: product_001.html  product_001.meta.json
research/corpus/e-commerce/walmart/: product_001.html  product_001.meta.json
research/corpus/e-commerce/wayfair/: product_001.html  product_001.meta.json
research/corpus/e-commerce/zappos/: product_001.html  product_001.meta.json
research/corpus/jobs/indeed/: search_001.html  search_001.meta.json
research/corpus/jobs/linkedin/: search_001.html  search_001.meta.json
research/corpus/jobs/monster/: search_001.html  search_001.meta.json
research/corpus/news/bbc/: homepage_001.html  homepage_001.meta.json
research/corpus/news/cnn/: article_001.html  article_001.meta.json
research/corpus/news/guardian/: homepage_001.html  homepage_001.meta.json
research/corpus/news/npr/: homepage_001.html  homepage_001.meta.json
research/corpus/realestate/redfin/: search_001.html  search_001.meta.json
research/corpus/recipes/allrecipes/: recipe_001.html  recipe_001.meta.json
research/corpus/recipes/tasty/: recipe_001.html  recipe_001.meta.json
research/corpus/travel/booking/: search_001.html  search_001.meta.json
research/corpus/travel/kayak/: search_001.html  search_001.meta.json
research/notes/: DIFFICULTY_IMPROVEMENT_PLAN.md  EXTERNAL_BENCHMARKS.md  SCRAPING_JOURNAL.md
research/scripts/: collect_html.py
scripts/: analyze_mind2web.py  check_training.py  checkpoint-sync.service  checkpoint-sync.timer  checkpoint_sync.sh  clean_training_state.sh  cleanup_local_checkpoints.sh  onstart.sh  pod_setup.sh  provision_vast.py  test_pod_setup.sh  test_resilient_training.py  training.service  training_controller.py  validate_training_ready.sh  verify_model_for_training.py  wandb_monitor.py
tests/: __init__.py  test_bs4_penalty.py  test_curriculum.py  test_default_dataset_backend.py  test_determinism.py  test_disk_cached_dataset.py  test_efficiency.py  test_env_smoke.py  test_eval_presets.py  test_executor_local.py  test_gotcha_archetypes.py  test_grading.py  test_hard_archetypes.py  test_html_size.py  test_i18n.py  test_lazy_dataset.py  test_limitation_archetypes.py  test_malformed_json_handling.py  test_navigate_tool.py  test_price_bounds_edge_case.py  test_primer_archetypes.py  test_process_partial_credit.py  test_solvability.py
