[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beautiful-soup-env"
version = "0.1.0"
description = "RL environment for training agents on BeautifulSoup HTML parsing tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Alex" }
]
keywords = ["rl", "reinforcement-learning", "beautifulsoup", "html", "scraping", "verifiers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "soupsieve>=2.4",
    "datasets>=2.14.0",
    "jsonschema>=4.17.0",
    "openai>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
verifiers = [
    "verifiers>=0.1.0",
]
all = [
    "beautiful-soup-env[dev,verifiers]",
]

[project.urls]
Homepage = "https://github.com/seconds-0/beautifulsoup-rl"
Documentation = "https://github.com/seconds-0/beautifulsoup-rl#readme"
Repository = "https://github.com/seconds-0/beautifulsoup-rl"

[tool.hatch.build.targets.wheel]
packages = ["bs4_env", "beautiful_soup_env.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 60

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.verifiers.eval]
default_model = "gpt-4"
default_num_examples = 100
default_rollouts = 1
