[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beautiful-soup-env"
version = "0.1.0"
description = "RL environment for training agents on BeautifulSoup HTML parsing tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Alex" }
]
keywords = ["rl", "reinforcement-learning", "beautifulsoup", "html", "scraping", "verifiers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "html5lib>=1.1",
    "soupsieve>=2.4",
    "datasets>=2.14.0",
    "jsonschema>=4.17.0",
]

[project.optional-dependencies]
eval = [
    "openai>=2.11.0",
]
prime = [
    "prime-sandboxes>=0.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
verifiers = [
    "verifiers>=0.1.0",
]
all = [
    "beautiful-soup-env[dev,verifiers,eval,prime]",
]

[project.urls]
Homepage = "https://github.com/seconds-0/beautifulsoup-rl"
Documentation = "https://github.com/seconds-0/beautifulsoup-rl#readme"
Repository = "https://github.com/seconds-0/beautifulsoup-rl"

[tool.hatch.build.targets.wheel]
packages = ["bs4_env"]
# Include data files (bench_manifest.json, etc.)
include = ["bs4_env/data/*.json"]

[tool.hatch.build.targets.wheel.force-include]
"beautiful_soup_env.py" = "beautiful_soup_env.py"
"pyproject.toml" = "pyproject.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
timeout = 60
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "E402", "SIM102", "SIM103", "SIM105", "SIM108", "SIM116"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.verifiers.eval]
# Default evaluation settings for vf-eval (keys match Verifiers docs)
num_examples = 100
rollouts_per_example = 1

# Environment-specific defaults (custom namespace)
[tool.beautiful_soup_env.defaults]
split = "bench"
mode = "mvp"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
